--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^3.7.1",
-    "gatsby-image": "^3.7.1",
-    "gatsby-plugin-manifest": "^3.7.1",
-    "gatsby-plugin-offline": "^4.7.1",
-    "gatsby-plugin-react-helmet": "^4.7.1",
-    "gatsby-plugin-sharp": "^3.7.1",
-    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby": "^4.2.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
     "gatsby-source-pg": "^0.2.1",
-    "gatsby-transformer-sharp": "^3.7.1",
-    "graphql": "^15.4.0",
+    "gatsby-transformer-sharp": "^4.2.0",
+    "graphql": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -28,7 +30,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.3.1"
+    "prettier": "^2.4.1"
   },
   "repository": {
     "type": "git",
