--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-source-filesystem": "^4.2.0",
-    "gatsby-source-pg": "^0.2.1",
+    "gatsby-source-pg": "1.0.0-rc.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "graphql": "^15.7.2",
     "react": "^17.0.2",
@@ -39,6 +39,7 @@
   "resolutions": {
     "graphql": "^15.4.0",
     "graphql-compose": "^7.25.0",
+    "gatsby-source-graphql": "4.x",
     "webpack": "^5.24.2"
   }
 }
